--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 h1 {
-    font-size: 60px;
+    font-size: 70px;
+    font-weight: 500;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
 }
